# NezukoChan

./: .gitignore  README.md  query.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  errors_lib_raw.txt  post_sitemap_full.xml  search_results.html  search_results_hindi.html  search_results_imdb.html  search_results_s1.html  series_list.html  series_sitemap2.xml  sitemap_index.xml  tauri.conf.json  types_json.json
src-tauri/capabilities/: default.json
src-tauri/src/: anime.rs  debug_quality.rs  proxy.rs  source_check.rs  zephyr_test.rs
src-tauri/src/extractors/: allanime.rs  gogaes.rs  hianime.rs  mapping.rs  mod.rs
src/components/: ErrorBoundary.tsx
src/components/anime/: SeasonSelector.tsx
src/components/layout/: Footer.tsx  Layout.tsx  Navbar.desktop.tsx
src/components/player/: VideoPlayer.tsx
src/components/ui/: AnimeCard.tsx  CollectionCard.tsx  FilterPanel.tsx  ScrollRow.tsx
src/hooks/: useLibrary.ts  useProvider.ts  useSetup.ts
src/pages/anime/: AnimeDetail.desktop.tsx  AnimeDetail.mobile.tsx  AnimeDetail.tsx
src/pages/auth/: AniListCallback.tsx
src/pages/catalog/: Catalog.desktop.tsx  (+1 more)
src/services/: anilist.ts  anilistAuth.ts  gdriveAuth.ts
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: index.css
tauri-app/src-tauri/: archive_o.html  category_sitemap.xml  errors_lib.txt  letters_sitemap.xml  one-piece-in.html  one_piece_inspect.html  search_ep500.html  search_imdb_dump.html  search_results_500.html  search_results_slug.html  search_results_subbed.html  series_sitemap1.xml
(+36 files in other folders)
