[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"
scraper = "0.25.0"
# Crypto & Extraction Dependencies (Super Scraper)
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
base64 = "0.21"
regex = "1"
hex = "0.4"
md-5 = "0.10"
cipher = "0.4"
urlencoding = "2.1.3"
aes-gcm = "0.10"
tauri-plugin-http = "2"
